--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>My first changes</h1>
+<p>My I will learn.</p>
 
 </body>
 </html>
